use vw instead of em for padding

--- a/woodcut/templates/page.html
+++ b/woodcut/templates/page.html
@@ -4,8 +4,8 @@
 <!-- /wp:column -->
 
 <!-- wp:column {"width":"66.66%"} -->
-<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:group {"style":{"spacing":{"padding":{"top":"3em","right":"3em","bottom":"3em","left":"3em"}}}} -->
-<div class="wp-block-group" style="padding-top:3em;padding-right:3em;padding-bottom:3em;padding-left:3em">
+<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:group {"style":{"spacing":{"padding":{"top":"5vw","right":"5vw","bottom":"5vw","left":"5vw"}}}} -->
+<div class="wp-block-group" style="padding-top:5vw;padding-right:5vw;padding-bottom:5vw;padding-left:5vw">
 <!-- wp:post-title /-->
 
 <!-- wp:post-featured-image /-->
