--- a/woodcut/templates/singular.html
+++ b/woodcut/templates/singular.html
@@ -4,8 +4,8 @@
 <!-- /wp:column -->
 
 <!-- wp:column {"width":"66.66%"} -->
-<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:group {"style":{"spacing":{"padding":{"top":"3em","right":"3em","bottom":"3em","left":"3em"}}}} -->
-<div class="wp-block-group" style="padding-top:3em;padding-right:3em;padding-bottom:3em;padding-left:3em"><!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical"}} -->
+<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:group {"style":{"spacing":{"padding":{"top":"5vw","right":"5vw","bottom":"5vw","left":"5vw"}}}} -->
+<div class="wp-block-group" style="padding-top:5vw;padding-right:5vw;padding-bottom:5vw;padding-left:5vw"><!-- wp:group {"style":{"spacing":{"blockGap":"0px"}},"layout":{"type":"flex","orientation":"vertical"}} -->
 <div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","isLink":true} /-->
 
 <!-- wp:post-title {"isLink":true} /--></div>
@@ -74,8 +74,8 @@
 <!-- /wp:column --></div>
 <!-- /wp:columns -->
 
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"3em","right":"3em","bottom":"3em","left":"3em"}}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
-<div class="wp-block-group" style="padding-top:3em;padding-right:3em;padding-bottom:3em;padding-left:3em"><!-- wp:post-navigation-link {"type":"previous","label":"Previous: ","showTitle":true} /-->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"5vw","right":"5vw","bottom":"5vw","left":"5vw"}}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+<div class="wp-block-group" style="padding-top:5vw;padding-right:5vw;padding-bottom:5vw;padding-left:5vw"><!-- wp:post-navigation-link {"type":"previous","label":"Previous: ","showTitle":true} /-->
 
 <!-- wp:post-navigation-link {"label":"Next: ","showTitle":true} /--></div>
 <!-- /wp:group -->
