update screenshot and licence details

--- a/woodcut/style.css
+++ b/woodcut/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Woodcut
-Theme URI: http://github.com/scruffian/themes/woodcut
+Theme URI: https://github.com/scruffian/themes/tree/trunk/woodcut
 Author: Scruffian
 Author URI: http://scruffian.com
 Description: A theme inspired by relief printing
