--- a/console/style.css
+++ b/console/style.css
@@ -1,17 +1,16 @@
 /*
-Theme Name: Terminal
-Theme URI: https://github.com/scruffian/themes/tree/trunk/terminal
+Theme Name: Console
+Theme URI: https://github.com/scruffian/themes/tree/trunk/console
 Author: Scruffian
 Author URI: https://scruffian.com
 Description: A theme that tries to mimic the look of a terminal.
 Requires at least: 5.8
 Tested up to: 5.9
 Requires PHP: 5.7
-Version: 0.0.1
+Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Template:
-Text Domain: terminal
+Text Domain: console
 Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, rtl-language-support, theme-options, threaded-comments, translation-ready, wide-blocks
 */
 
