add some i18n text

--- a/console/templates/archive.html
+++ b/console/templates/archive.html
@@ -7,6 +7,10 @@
 	<hr class="wp-block-separator has-alpha-channel-opacity" />
 	<!-- /wp:separator -->
 
-	<!-- wp:template-part {"slug":"query"} /-->
+<!-- wp:template-part {"slug":"query"} /-->
+
+<!-- wp:spacer {"height":"1em"} -->
+<div style="height:1em" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 
 <!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
