--- a/console/templates/singular.html
+++ b/console/templates/singular.html
@@ -43,4 +43,8 @@
 	<!-- wp:post-comments-form /--></div>
 	<!-- /wp:comments -->
 
-	<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+<!-- wp:spacer {"height":"1em"} -->
+<div style="height:1em" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
+
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
