--- a/console/templates/404.html
+++ b/console/templates/404.html
@@ -1,6 +1,6 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
-<!-- wp:heading {"level":1} -->
-<h1>That page can&rsquo;t be found</h1>
-<!-- /wp:heading -->
-
+<!-- wp:pattern {"slug":"console/hidden-404"} /-->
+<!-- wp:spacer {"height":"1em"} -->
+<div style="height:1em" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 <!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
