--- a/triangulate/templates/page.html
+++ b/triangulate/templates/page.html
@@ -1,27 +1,15 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
-<!-- wp:group {"layout":{"inherit":true}} -->
-<div class="wp-block-group">
-<!-- wp:post-title /-->
-</div>
+<!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
+<div class="wp-block-group"><!-- wp:post-title /--></div>
 <!-- /wp:group -->
 
 <!-- wp:group {"tagName":"main","lock":{"move":false,"remove":true}} -->
-<main class="wp-block-group">
-<!-- wp:post-featured-image {"align":"full"} /-->
+<main class="wp-block-group"><!-- wp:post-featured-image {"align":"full"} /-->
 
-<!-- wp:post-content {"layout":{"inherit":true},"lock":{"move":false,"remove":true}} /-->
-</main>
+<!-- wp:post-content {"lock":{"move":false,"remove":true},"layout":{"inherit":true}} /--></main>
 <!-- /wp:group -->
 
 <!-- wp:group {"layout":{"inherit":true}} -->
-<div class="wp-block-group">
-    <!-- wp:spacer {"height":60} -->
-    <div style="height:60px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-    <!-- wp:pattern {"slug":"triangulate/comments"} -->
-</div>
-<!-- /wp:pattern -->
-
-<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+<div class="wp-block-group"><!-- wp:template-part {"slug":"footer","tagName":"footer"} /--></div>
 <!-- /wp:group -->
